versions/0.9.0/_sources/refs/_aws-cdk_aws-kinesisanalytics.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"Q/D2wxI6qyWHL29Y0b0Wq7d11RXmrnLPNYXUc8g19iQ="}

@aws-cdk/aws-kinesisanalytics
=============================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.KinesisAnalytics/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.KinesisAnalytics" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.KinesisAnalytics --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.KinesisAnalytics" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/kinesisanalytics/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:kinesisanalytics:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="kinesisanalytics" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>kinesisanalytics</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:kinesisanalytics:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='kinesisanalytics', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-kinesisanalytics/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-kinesisanalytics@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-kinesisanalytics": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-kinesisanalytics@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-kinesisanalytics/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-kinesisanalytics@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-kinesisanalytics": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-kinesisanalytics@0.9.0



.. mdinclude:: ./__aws-cdk_aws-kinesisanalytics.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-kinesisanalytics

ApplicationId
^^^^^^^^^^^^^

.. py:class:: ApplicationId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.ApplicationId;

      .. code-tab:: javascript

         const { ApplicationId } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { ApplicationId } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ApplicationOutputId
^^^^^^^^^^^^^^^^^^^

.. py:class:: ApplicationOutputId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.ApplicationOutputId;

      .. code-tab:: javascript

         const { ApplicationOutputId } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { ApplicationOutputId } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ApplicationReferenceDataSourceId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ApplicationReferenceDataSourceId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.ApplicationReferenceDataSourceId;

      .. code-tab:: javascript

         const { ApplicationReferenceDataSourceId } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { ApplicationReferenceDataSourceId } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-kinesisanalytics.cloudformation

ApplicationOutputResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationOutputResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationOutputResource } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { cloudformation.ApplicationOutputResource } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationOutputResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationOutputResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-kinesisanalytics.ApplicationOutputId` *(readonly)*

   .. py:class:: DestinationSchemaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource.DestinationSchemaProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationOutputResource.DestinationSchemaProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationOutputResource.DestinationSchemaProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordFormatType

         ``ApplicationOutputResource.DestinationSchemaProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-destinationschema.html#cfn-kinesisanalytics-applicationoutput-destinationschema-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: KinesisFirehoseOutputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisFirehoseOutputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationOutputResource.KinesisFirehoseOutputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationOutputResource.KinesisFirehoseOutputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.KinesisFirehoseOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisfirehoseoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisfirehoseoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.KinesisFirehoseOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisfirehoseoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisfirehoseoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: KinesisStreamsOutputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisStreamsOutputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationOutputResource.KinesisStreamsOutputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationOutputResource.KinesisStreamsOutputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.KinesisStreamsOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisstreamsoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisstreamsoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.KinesisStreamsOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisstreamsoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisstreamsoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: LambdaOutputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource.LambdaOutputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationOutputResource.LambdaOutputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationOutputResource.LambdaOutputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.LambdaOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-lambdaoutput.html#cfn-kinesisanalytics-applicationoutput-lambdaoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.LambdaOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-lambdaoutput.html#cfn-kinesisanalytics-applicationoutput-lambdaoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: OutputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResource.OutputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationOutputResource.OutputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationOutputResource.OutputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: destinationSchema

         ``ApplicationOutputResource.OutputProperty.DestinationSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-destinationschema


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.DestinationSchemaProperty`


      .. py:attribute:: kinesisFirehoseOutput

         ``ApplicationOutputResource.OutputProperty.KinesisFirehoseOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-kinesisfirehoseoutput


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisFirehoseOutputProperty` or undefined


      .. py:attribute:: kinesisStreamsOutput

         ``ApplicationOutputResource.OutputProperty.KinesisStreamsOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-kinesisstreamsoutput


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisStreamsOutputProperty` or undefined


      .. py:attribute:: lambdaOutput

         ``ApplicationOutputResource.OutputProperty.LambdaOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-lambdaoutput


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.LambdaOutputProperty` or undefined


      .. py:attribute:: name

         ``ApplicationOutputResource.OutputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ApplicationOutputResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationOutputResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationOutputResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationOutputResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationOutputResourceProps } from '@aws-cdk/aws-kinesisanalytics';





   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::ApplicationOutput.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationoutput.html#cfn-kinesisanalytics-applicationoutput-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: output

      ``AWS::KinesisAnalytics::ApplicationOutput.Output``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationoutput.html#cfn-kinesisanalytics-applicationoutput-output


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.OutputProperty`


ApplicationReferenceDataSourceResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationReferenceDataSourceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationReferenceDataSourceResource } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { cloudformation.ApplicationReferenceDataSourceResource } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationReferenceDataSourceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationReferenceDataSourceResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-kinesisanalytics.ApplicationReferenceDataSourceId` *(readonly)*

   .. py:class:: CSVMappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.CSVMappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.CSVMappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.CSVMappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordColumnDelimiter

         ``ApplicationReferenceDataSourceResource.CSVMappingParametersProperty.RecordColumnDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-csvmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-csvmappingparameters-recordcolumndelimiter


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: recordRowDelimiter

         ``ApplicationReferenceDataSourceResource.CSVMappingParametersProperty.RecordRowDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-csvmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-csvmappingparameters-recordrowdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: JSONMappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.JSONMappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.JSONMappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.JSONMappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordRowPath

         ``ApplicationReferenceDataSourceResource.JSONMappingParametersProperty.RecordRowPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-jsonmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-jsonmappingparameters-recordrowpath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: MappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.MappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.MappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.MappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: csvMappingParameters

         ``ApplicationReferenceDataSourceResource.MappingParametersProperty.CSVMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-mappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-mappingparameters-csvmappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.CSVMappingParametersProperty` or undefined


      .. py:attribute:: jsonMappingParameters

         ``ApplicationReferenceDataSourceResource.MappingParametersProperty.JSONMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-mappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-mappingparameters-jsonmappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.JSONMappingParametersProperty` or undefined


   .. py:class:: RecordColumnProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordColumnProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.RecordColumnProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.RecordColumnProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: name

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: sqlType

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.SqlType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-sqltype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: mapping

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.Mapping``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-mapping


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: RecordFormatProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordFormatProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.RecordFormatProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.RecordFormatProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordFormatType

         ``ApplicationReferenceDataSourceResource.RecordFormatProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordformat.html#cfn-kinesisanalytics-applicationreferencedatasource-recordformat-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: mappingParameters

         ``ApplicationReferenceDataSourceResource.RecordFormatProperty.MappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordformat.html#cfn-kinesisanalytics-applicationreferencedatasource-recordformat-mappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.MappingParametersProperty` or undefined


   .. py:class:: ReferenceDataSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: referenceSchema

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.ReferenceSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-referenceschema


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceSchemaProperty`


      .. py:attribute:: s3ReferenceDataSource

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.S3ReferenceDataSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-s3referencedatasource


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty` or undefined


      .. py:attribute:: tableName

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.TableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-tablename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ReferenceSchemaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceSchemaProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.ReferenceSchemaProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.ReferenceSchemaProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordColumns

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordColumnProperty`)[]


      .. py:attribute:: recordFormat

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordformat


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordFormatProperty`


      .. py:attribute:: recordEncoding

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordEncoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordencoding


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: S3ReferenceDataSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: bucketArn

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.BucketARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-bucketarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: fileKey

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.FileKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-filekey


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: referenceRoleArn

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.ReferenceRoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-referencerolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



ApplicationReferenceDataSourceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationReferenceDataSourceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationReferenceDataSourceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationReferenceDataSourceResourceProps } from '@aws-cdk/aws-kinesisanalytics';





   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::ApplicationReferenceDataSource.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationreferencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: referenceDataSource

      ``AWS::KinesisAnalytics::ApplicationReferenceDataSource.ReferenceDataSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationreferencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty`


ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationResource } = require('@aws-cdk/aws-kinesisanalytics');

      .. code-tab:: typescript

         import { cloudformation.ApplicationResource } from '@aws-cdk/aws-kinesisanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-kinesisanalytics.ApplicationId` *(readonly)*

   .. py:class:: CSVMappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.CSVMappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.CSVMappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.CSVMappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordColumnDelimiter

         ``ApplicationResource.CSVMappingParametersProperty.RecordColumnDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-csvmappingparameters.html#cfn-kinesisanalytics-application-csvmappingparameters-recordcolumndelimiter


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: recordRowDelimiter

         ``ApplicationResource.CSVMappingParametersProperty.RecordRowDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-csvmappingparameters.html#cfn-kinesisanalytics-application-csvmappingparameters-recordrowdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: InputLambdaProcessorProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.InputLambdaProcessorProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.InputLambdaProcessorProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.InputLambdaProcessorProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationResource.InputLambdaProcessorProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputlambdaprocessor.html#cfn-kinesisanalytics-application-inputlambdaprocessor-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationResource.InputLambdaProcessorProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputlambdaprocessor.html#cfn-kinesisanalytics-application-inputlambdaprocessor-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: InputParallelismProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.InputParallelismProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.InputParallelismProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.InputParallelismProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: count

         ``ApplicationResource.InputParallelismProperty.Count``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputparallelism.html#cfn-kinesisanalytics-application-inputparallelism-count


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: InputProcessingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.InputProcessingConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.InputProcessingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.InputProcessingConfigurationProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: inputLambdaProcessor

         ``ApplicationResource.InputProcessingConfigurationProperty.InputLambdaProcessor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputprocessingconfiguration.html#cfn-kinesisanalytics-application-inputprocessingconfiguration-inputlambdaprocessor


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputLambdaProcessorProperty` or undefined


   .. py:class:: InputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.InputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.InputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.InputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: inputSchema

         ``ApplicationResource.InputProperty.InputSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputschema


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputSchemaProperty`


      .. py:attribute:: namePrefix

         ``ApplicationResource.InputProperty.NamePrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-nameprefix


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: inputParallelism

         ``ApplicationResource.InputProperty.InputParallelism``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputparallelism


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputParallelismProperty` or undefined


      .. py:attribute:: inputProcessingConfiguration

         ``ApplicationResource.InputProperty.InputProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputprocessingconfiguration


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputProcessingConfigurationProperty` or undefined


      .. py:attribute:: kinesisFirehoseInput

         ``ApplicationResource.InputProperty.KinesisFirehoseInput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-kinesisfirehoseinput


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.KinesisFirehoseInputProperty` or undefined


      .. py:attribute:: kinesisStreamsInput

         ``ApplicationResource.InputProperty.KinesisStreamsInput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-kinesisstreamsinput


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.KinesisStreamsInputProperty` or undefined


   .. py:class:: InputSchemaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.InputSchemaProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.InputSchemaProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.InputSchemaProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordColumns

         ``ApplicationResource.InputSchemaProperty.RecordColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.RecordColumnProperty`)[]


      .. py:attribute:: recordFormat

         ``ApplicationResource.InputSchemaProperty.RecordFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordformat


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.RecordFormatProperty`


      .. py:attribute:: recordEncoding

         ``ApplicationResource.InputSchemaProperty.RecordEncoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordencoding


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: JSONMappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.JSONMappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.JSONMappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.JSONMappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordRowPath

         ``ApplicationResource.JSONMappingParametersProperty.RecordRowPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-jsonmappingparameters.html#cfn-kinesisanalytics-application-jsonmappingparameters-recordrowpath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: KinesisFirehoseInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.KinesisFirehoseInputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.KinesisFirehoseInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.KinesisFirehoseInputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationResource.KinesisFirehoseInputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisfirehoseinput.html#cfn-kinesisanalytics-application-kinesisfirehoseinput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationResource.KinesisFirehoseInputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisfirehoseinput.html#cfn-kinesisanalytics-application-kinesisfirehoseinput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: KinesisStreamsInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.KinesisStreamsInputProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.KinesisStreamsInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.KinesisStreamsInputProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: resourceArn

         ``ApplicationResource.KinesisStreamsInputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisstreamsinput.html#cfn-kinesisanalytics-application-kinesisstreamsinput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: roleArn

         ``ApplicationResource.KinesisStreamsInputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisstreamsinput.html#cfn-kinesisanalytics-application-kinesisstreamsinput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: MappingParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.MappingParametersProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.MappingParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.MappingParametersProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: csvMappingParameters

         ``ApplicationResource.MappingParametersProperty.CSVMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-mappingparameters.html#cfn-kinesisanalytics-application-mappingparameters-csvmappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.CSVMappingParametersProperty` or undefined


      .. py:attribute:: jsonMappingParameters

         ``ApplicationResource.MappingParametersProperty.JSONMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-mappingparameters.html#cfn-kinesisanalytics-application-mappingparameters-jsonmappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.JSONMappingParametersProperty` or undefined


   .. py:class:: RecordColumnProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.RecordColumnProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.RecordColumnProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.RecordColumnProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: name

         ``ApplicationResource.RecordColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: sqlType

         ``ApplicationResource.RecordColumnProperty.SqlType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-sqltype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: mapping

         ``ApplicationResource.RecordColumnProperty.Mapping``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-mapping


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: RecordFormatProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.KinesisAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResource.RecordFormatProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.RecordFormatProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.RecordFormatProperty } from '@aws-cdk/aws-kinesisanalytics';





      .. py:attribute:: recordFormatType

         ``ApplicationResource.RecordFormatProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordformat.html#cfn-kinesisanalytics-application-recordformat-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: mappingParameters

         ``ApplicationResource.RecordFormatProperty.MappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordformat.html#cfn-kinesisanalytics-application-recordformat-mappingparameters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.MappingParametersProperty` or undefined



ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.KinesisAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.kinesisanalytics.cloudformation.ApplicationResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationResourceProps } from '@aws-cdk/aws-kinesisanalytics';





   .. py:attribute:: inputs

      ``AWS::KinesisAnalytics::Application.Inputs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-inputs


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: applicationCode

      ``AWS::KinesisAnalytics::Application.ApplicationCode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationcode


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: applicationDescription

      ``AWS::KinesisAnalytics::Application.ApplicationDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationdescription


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-kinesisanalytics

